# ai-microservices-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  fix_and_setup.py  pyproject.toml  requirements-dev.txt  setup_ai_service.py  setup_gateway.py  setup_shared.py
.github/workflows/: ci.yml
ai-service/: Dockerfile  requirements.txt
ai-service/app/: config.py  main.py  schemas.py
ai-service/app/middleware/: auth.py
ai-service/app/routers/: health.py  inference.py
ai-service/app/services/: llm_service.py  prompt_manager.py
api-gateway/: Dockerfile  requirements.txt
api-gateway/app/: config.py  main.py  models.py  schemas.py
api-gateway/app/middleware/: auth.py
api-gateway/app/routers/: auth.py  health.py
api-gateway/app/services/: auth_service.py
document-service/: Dockerfile  requirements.txt
document-service/app/: config.py  database.py  main.py  models.py  schemas.py
document-service/app/middleware/: auth.py
document-service/app/routers/: documents.py  health.py
document-service/app/services/: chunker.py  (+2 more)
infra/: init.sql
nginx/: nginx.conf
shared/: pyproject.toml
shared/shared/: __init__.py  auth.py  exceptions.py  logging.py  models.py
tests/: conftest.py
tests/test_ai_service/: conftest.py  test_inference.py  test_prompt_manager.py
tests/test_document_service/: conftest.py  test_chunker.py  test_documents.py
tests/test_gateway/: conftest.py  test_auth.py
tests/test_worker_service/: conftest.py  test_tasks.py
worker-service/: Dockerfile  requirements.txt
worker-service/app/: celery_app.py  config.py
(+3 files in other folders)
